Do not enforce bitmap glyphs for fonts not in blacklist

An earlier change [1] to avoid using bitmap glyphs for blacklisted fonts
accidentally ended up forcefully enabling the same for all remaining
fonts, even if 'embeddedbitmaps' was already disabled system-wide.

It also turns out that there exist more Latin fonts with embedded
bitmaps, so blacklist those as well.

[1]: https://crrev.com/c/702422

Bug: 797496
Change-Id: Ief20bfdd2f40e0572460e792f8a2b12de0bff419